# khl_project

./: .gitignore  CMakeLists.txt  README.md  configure
3rd/: CMakeLists.txt  README.md
3rd/cCRC/: GetAll.md  GetCrc.md  Readme.md  crc.h
3rd/cCRC/crc/: Readme.md  crc.c  crc.h  crc16.c  crc32.c  crc64.c  crc8.c  crc_table.h
3rd/cJSON_test/: CMakeLists.txt  json_test.c
3rd/crc/: crc.c  crc.h  readme.md
3rd/mscurses/: CMakeLists.txt
3rd/mscurses/test/: CMakeLists.txt  main.c
3rd/ncurses/: CMakeLists.txt
3rd/ncurses_test/: CMakeLists.txt  main.c
3rd/notcurses_test/: Readme.md
3rd/pybind11_test/: CMakeLists.txt  c_cpptest.h  cpptest.cpp  ctest.c  pytest.cpp  pytest.h  pytest.py
cfun/: CMakeLists.txt  README.md
cfun/hw_info/: CMakeLists.txt
cfun/hw_info/hw_default/: CMakeLists.txt  get_hw_info.c  get_used_info.c
cfun/hw_info/sysnet_c/: README.md  sysnet
cfun/linux_c/: CMakeLists.txt  cdefine.c  memcpy.c  rand.c  readme.md  strcpy.c  strstr.c  struct_array.c
cfun/signal/: CMakeLists.txt
cfun/signal/pipe_signal/: readme.md
cfun/win32/: readme.md  test.c
docker/: Dockerfile  readme.md
docker/test_eg1/: readme.md
docker/test_eg1/shm_sem/: memreader  memreader.c  memwriter  memwriter.c
fun/: CMakeLists.txt  readme.md
fun/device/: CMakeLists.txt  readme.md
fun/device/kernel/: CMakeLists.txt  Kbuild  ioctl_dev.c  load_kernel_module.sh
fun/device/user/: CMakeLists.txt  ioctl.c
fun/libuv/: CMakeLists.txt  readme.md
fun/libuv/async/: CMakeLists.txt  thread_async.c
fun/libuv/shm_buf/: CMakeLists.txt  shm_client.c
fun/libuv/signal_tid/: CMakeLists.txt  libuv_signal_tid.c  signal_tid.c
fun/libuv/socket/: CMakeLists.txt  libuv_client.c  libuv_client_a.c  libuv_server_a.c  tcp_echo_server.c
fun/modules/: CMakeLists.txt  readme.md
fun/modules/shm-sem/: CMakeLists.txt  consumer_shm.c  producer_shm.c  readme.md
fun/primary/: CMakeLists.txt  readme.md
fun/primary/asyncthread/: CMakeLists.txt  asyncthread.c
fun/primary/cfifo/: CMakeLists.txt  cycled_fifo.c  cycled_fifo.h  fifo.h  readme.md
fun/primary/cpfifo/: CMakeLists.txt  cycled_priority_fifo.c  cycled_priority_fifo.h  readme.md
fun/primary/epoll/: CMakeLists.txt  epoll_client.c  epoll_server.c
fun/primary/fifo/: CMakeLists.txt  fifo.c  fifo.h  readme.md
fun/primary/kfifo/: readme.md
fun/primary/list/: CMakeLists.txt  list.c  readme.md
fun/primary/msg_que/: CMakeLists.txt  msg_que_client.c  posix_msgq_notify.c  posix_msgq_recv.c  posix_msgq_send.c
fun/primary/pid/: CMakeLists.txt  fork.c  name_to_pid.c  pid_test.c  readme.md
fun/primary/pipe/: CMakeLists.txt
fun/primary/poll/: poll_server.c
fun/primary/rbtree/: CMakeLists.txt  rbtree.c  rbtree.h  sys_tree.h
fun/primary/select/: select_server.c
fun/primary/sem/: CMakeLists.txt  nanobench_test.cpp  posix_sem_c.c  posix_sem_p.c  sem_c.c  sem_customer.c  sem_p-c.c  sem_producer.c  sysv_sem.c  sysv_sem_c.c  sysv_sem_p.c
fun/primary/shm/: CMakeLists.txt  posix_memreader.c  posix_memwriter.c  posix_shm_reader.c  posix_shm_writer.c  process_shm_a.c  process_shm_b.c  shm_read.c  shm_reader.c  shm_writer.c  sysv_shm_writer.c
fun/primary/signal/: CMakeLists.txt  signal_client.c  signal_server.c  signal_tid.c  sigset.c
fun/primary/socket/: CMakeLists.txt
fun/primary/socket/ip/: CMakeLists.txt  readme.md
fun/primary/socket/tcp/: CMakeLists.txt  long_client.c  long_server.c  multiclient_server.c  multipid_server.c  multitid_server.c  readme.md  tidsafe_server.c
fun/primary/socket/udp/: CMakeLists.txt  broadcast_cli.c  broadcast_serv.c  multicast_serv.c  readme.md
fun/primary/thread/: CMakeLists.txt  thread_cancel.c
fun/primary/threadpool/tests/: heavy  heavy.c  shutdown  shutdown.c  thrdtest  thrdtest.c
json/: CMakeLists.txt
json/cJSON/: CMakeLists.txt  json_test.c
json/cJSON/tests/: json_test  jss.json  test
kernel/: readme.md
lib/: CMakeLists.txt
log/: CMakeLists.txt
log/simple_cjson/: CMakeLists.txt
log/simple_log/: CMakeLists.txt  log.c  log.h
notes/: CMakeLists.txt  readme.md
notes/cuda/: readme.md
notes/linux-note/: ReadMe.md
notes/linux-note/Unix环境高级编程/chapter/: 13_daemon.md  14_advanced_IO.md
notes/linux-note/cpp-primer-5th/: README.md
notes/linux-note/data-algo/source/linear/stack/c/linux/: list.h
notes/linux-note/linux-api/: README.md  SUMMARY.md  newindex.sh
notes/linux-note/linux性能优化/: readme.md
notes/linux-note/linux操作系统/: readme.md
notes/linux-note/linux系统编程手册/56-socket介绍/: README.md
notes/linux-note/linux网络编程/ch03/: README.md
notes/linux-note/python/pandas/: SUMMARY.md
notes/linux-note/tcp-ip网络编程/: readme.md
notes/virtual/docker/: docker 概述.md
perf/: CMakeLists.txt  readme.md
perf/bbenchmark/: json_analysis.py  requirements.txt
perf/common_perf/: CMakeLists.txt  benchmark_test.cpp  gperftools_test.cpp  nanobench_test.cpp  perf_get_info.cpp
pref/: CMakeLists.txt  readme.md
pref/common_pref/: CMakeLists.txt  main.cpp  pref001_x.cpp
soc/: readme.md
soc/hw_design/: readme.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/runtime_api/: CMakeLists.txt
src/client/runtime_api/flexbison/: CMakeLists.txt  main.cpp
src/client/runtime_api/flexbison/driver/: CMakeLists.txt  driver.cpp  lexer.ll  parser.yy
src/client/runtime_api/flexbison/include/: driver.hpp  scanner.hpp
src/client/runtime_api/learning-flexbison/: parser
src/codetest/: CMakeLists.txt  main.c
src/server/: CMakeLists.txt  libuv_server.c  server_main.c  shm_read.cpp  shm_write.cpp
test/: CMakeLists.txt  README.md
test/common_test/: CMakeLists.txt  main.cpp  test001_x.cpp
test/doctest_fakeilt/: README.md
tools/: CMakeLists.txt
tools/doxygen/: readme.md
tools/python_excel/: data3.xlsx  profile_ansys.py  profile_ansys_shm.py  profile_shm_notify.py  yolov3_profile_time.xlsx  yolov3_profile_time_new.xlsx
tools/python_excel/json_excel/: acc.json  acc.xlsx  acc_ansys.py  acc_multi.xls  data3.json  data3.xlsx  data4.csv  data4.xlsx  excel_ansys.py  json_ansys.py  (+5 more)
tools/shell_tools/: newindex.sh  readme.md
tools/stream_test/: readme.md  stream
(+52 files in other folders)
