# 指定CMake编译最低要求版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 设置子目录并构建
ADD_SUBDIRECTORY(socket)
ADD_SUBDIRECTORY(shm)
ADD_SUBDIRECTORY(fifo)
ADD_SUBDIRECTORY(cfifo)
ADD_SUBDIRECTORY(cpfifo)
ADD_SUBDIRECTORY(list)
ADD_SUBDIRECTORY(rbtree)

ADD_SUBDIRECTORY(msg_que)
ADD_SUBDIRECTORY(pipe)
ADD_SUBDIRECTORY(sem)
ADD_SUBDIRECTORY(signal)