# 指定CMake编译最低要求版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 指定头文件
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# 设置LIBLOG_SRC变量
SET(LIBLOG_SRC
    log.h
    log.c
)

# 取变量LIBLOG_SRC值，指定生成动态库liblog.so
ADD_LIBRARY(log SHARED
    ${LIBLOG_SRC}
)

# 为动态库liblog.so指定头文件目录为当前目录CMAKE_CURRENT_SOURCE_DIR
target_include_directories(log PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

# 设置log动态库版本VERSION=${${PROJECT_NAME}_VERSION}
# 设置api版本SOVERSION=${${PROJECT_NAME}_SOVERSION
SET_TARGET_PROPERTIES(log PROPERTIES VERSION ${${PROJECT_NAME}_VERSION} SOVERSION ${${PROJECT_NAME}_SOVERSION})

# 将头文件安装到CMAKE_INSTALL_INCLUDEDIR目录下
# 将库安装到CMAKE_INSTALL_LIBDIR目录下
install(FILES log.h DESTINATION /${CMAKE_INSTALL_INCLUDEDIR})
install(TARGETS log LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
