# 指定CMake编译最低要求版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 设置变量TARGET=server
SET(TARGET codetest)

# 指定头文件路径在当前目录下的/crc /
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/crc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)

# 查询当前目录下的/ /crc 包含的所有.c文件
FILE(GLOB CODETEST_SRCS "main.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/crc/*.c")

# 生成可执行文件
ADD_EXECUTABLE(${TARGET} ${CODETEST_SRCS})

# 链接到库
TARGET_LINK_LIBRARIES(${TARGET} ${LINK_LIB})

# 安装目标文件TARGET为可执行二进制文件(RUNTIME)到/bin路径下
install (TARGETS ${TARGET}
    RUNTIME
    DESTINATION ${CMAKE_INSTALL_BINDIR})
